UHEs ganham campo indice p manter ordenacao do config

--- a/data/config.json
+++ b/data/config.json
@@ -7,6 +7,7 @@
     "UHEs": 
     {
         "UHE1": {
+            "INDEX": 1,
             "GHMIN": 0.0,
             "GHMAX": 50.0,
             "EARMAX": 300.0,
