Troca backend plot (problema deps wsl)

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ docs/site/
 # environment.
 Manifest.toml
 
+# directory with python dependencies for PythonPlot
+.CondaPkg/**
+
 **.log
 **.png
 **.html
