--- a/data/config.json
+++ b/data/config.json
@@ -4,10 +4,9 @@
     "MAX_ITERACOES": 100,
     "NUMERO_SERIES_SIM_FINAL": 300,
     "NUMERO_CENARIOS_ESTAGIO": 10,
-    "UHEs": 
-    {
-        "UHE1": {
-            "INDEX": 1,
+    "UHEs": [
+        {
+            "NOME": "UHE1",
             "GHMIN": 0.0,
             "GHMAX": 50.0,
             "EARMIN": 0.0,
@@ -15,7 +14,7 @@
             "EARM_INICIAL": 50.0,
             "PENALIDADE_VERTIMENTO": 0.01
         }
-    },
+    ],
     "UTE": {
         "GTMIN": 0.0,
         "GTMAX": 30.0,
