--- a/data/config.json
+++ b/data/config.json
@@ -7,6 +7,7 @@
     "UHEs": [
         {
             "NOME": "UHE1",
+            "JUSANTE": "",
             "GHMIN": 0.0,
             "GHMAX": 50.0,
             "EARMIN": 0.0,
