--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,7 @@
+name = "SDDPlab"
+uuid = "5c1c4b2a-157d-4661-af07-65cbafd6173d"
+version = "1.0.0"
+
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
