--- a/data-refactor/data/system.jsonc
+++ b/data-refactor/data/system.jsonc
@@ -11,8 +11,18 @@
             "deficit_cost": 1000.0
         }
     },
-    // TODO - add exchange lines
-    "lines": {},
+    "lines": {
+        // accepts an external list of entities,
+        // which is defined in a CSV file and
+        // might override the default values
+        // of the "params" field
+        "entities": {
+            "file": "lines.csv"
+        },
+        "params": {
+            "exchange_penalty": 0.01
+        }
+    },
     "hydros": {
         // accepts an external list of entities,
         // which is defined in a CSV file and
