--- a/data-refactor/data/algorithm.jsonc
+++ b/data-refactor/data/algorithm.jsonc
@@ -11,6 +11,13 @@
     // TODO - policy graph x stochastic processes
     // some other fields may influence the policy graph
     // like scenarios, load, costs, etc.
+    "risk_measure": {
+        // expectation | worst_case | AV@R | CV@R | ...
+        "kind": "expectation",
+        // each risk measure might need different params,
+        // such as the confidence level for AV@R, etc.
+        "params": {}
+    },
     "convergence": {
         // Min/Max number of iterations
         "min_iterations": 10,
@@ -27,7 +34,5 @@
                 "num_iterations": 6
             }
         }
-    },
-    // TODO - Expectation of the policy - risk neutral, risk averse, etc..
-    "expectation": {}
+    }
 }
