--- a/data-refactor/main.jsonc
+++ b/data-refactor/main.jsonc
@@ -1,23 +1,6 @@
 {
     // policy | simulation - lower_simulation | upper_simulation
     "task": "policy",
-    "solver": {
-        // CLP | GLPK | HiGHS | CPLEX | Gurobi | ...
-        "name": "CLP",
-        "params": {
-            "time_limit": 60,
-            "threads": 1
-        }
-    },
-    "resources": {
-        // serial | parallel  
-        "strategy": "serial",
-        "processes": 1,
-        // TCP/IP (Distributed) | MPI (MPI.jl)
-        "communication": "TCP/IP",
-        // slurm | pbs | local (ClusterManagers.jl)
-        "manager": "slurm"
-    },
     "inputs": {
         "path": "data",
         // Each file defines settings for a specific
@@ -27,6 +10,9 @@
             // that is used to solve the optimization problem
             // (decomposition strategy, discretization, etc.)
             "algorithm": "algorithm.jsonc",
+            // Settings regarding the computational resources
+            // that are used to solve the optimization problem
+            "resources": "resources.jsonc",
             // Defines the stages that compose the problem
             // (initial dates, time periods, etc.)
             "stages": "stages.jsonc",
