--- a/data-refactor/data/algorithm.jsonc
+++ b/data-refactor/data/algorithm.jsonc
@@ -2,7 +2,7 @@
     // Policy graph constructor for defining
     // if the graph is regular, cyclic, etc.
     "policy_graph": {
-        "kind": "regular",
+        "kind": "RegularPolicyGraph",
         "params": {
             // Parameters for the policy graph
             "discount_rate": 1.00
@@ -12,8 +12,8 @@
     // some other fields may influence the policy graph
     // like scenarios, load, costs, etc.
     "risk_measure": {
-        // expectation | worst_case | AV@R | CV@R | ...
-        "kind": "expectation",
+        // Expectation | WorstCase | AV@R | CV@R | ...
+        "kind": "Expectation",
         // each risk measure might need different params,
         // such as the confidence level for AV@R, etc.
         "params": {}
@@ -24,8 +24,8 @@
         "max_iterations": 50,
         // Early stopping criteria and params
         "stopping_criteria": {
-            // lower_bound_stability | statistical | gap | ...
-            "kind": "lower_bound_stability",
+            // LowerBoundStability | statistical | gap | ...
+            "kind": "LowerBoundStability",
             "params": {
                 // Threshold for the early
                 // stopping in % of zinf delta
