--- a/data-refactor/data/algorithm.jsonc
+++ b/data-refactor/data/algorithm.jsonc
@@ -8,6 +8,15 @@
             "discount_rate": 1.00
         }
     },
+    "horizon": {
+        // explicit | daily | weekly | monthly | yearly
+        "kind": "ExplicitPlanningHorizon",
+        "params": {
+            "file": "stages.csv"
+        }
+        // TODO - stages with different lengths demand
+        // unit conversions when constructing each subproblem
+    },
     // TODO - policy graph x stochastic processes
     // some other fields may influence the policy graph
     // like scenarios, load, costs, etc.
