--- a/data-refactor/data/resources.jsonc
+++ b/data-refactor/data/resources.jsonc
@@ -2,16 +2,14 @@
     "solver": {
         // CLP | GLPK | HiGHS | CPLEX | Gurobi | ...
         "name": "CLP",
-        "params": {
-            "time_limit": 60,
-            "threads": 1
-        }
-    },
+        "params": {}
+    }
+    // TODO
     // serial | parallel  
-    "strategy": "serial",
-    "processes": 1,
-    // TCP/IP (Distributed) | MPI (MPI.jl)
-    "communication": "TCP/IP",
-    // slurm | pbs | local (ClusterManagers.jl)
-    "manager": "slurm"
+    // "strategy": "serial",
+    // "processes": 1,
+    // // TCP/IP (Distributed) | MPI (MPI.jl)
+    // "communication": "TCP/IP",
+    // // slurm | pbs | local (ClusterManagers.jl)
+    // "manager": "slurm"
 }
