--- a/data-refactor/data/system.jsonc
+++ b/data-refactor/data/system.jsonc
@@ -4,9 +4,7 @@
         // which is defined in a CSV file and
         // might override the default values
         // of the "params" field
-        "entities": {
-            "file": "buses.csv"
-        },
+        "file": "buses.csv",
         "params": {
             "deficit_cost": 1000.0
         }
@@ -16,9 +14,7 @@
         // which is defined in a CSV file and
         // might override the default values
         // of the "params" field
-        "entities": {
-            "file": "lines.csv"
-        },
+        "file": "lines.csv",
         "params": {
             "exchange_penalty": 0.01
         }
@@ -28,9 +24,7 @@
         // which is defined in a CSV file and
         // might override the default values
         // of the "params" field
-        "entities": {
-            "file": "hydros.csv"
-        },
+        "file": "hydros.csv",
         "params": {
             "downstream_id": 0,
             "productivity": 1.0,
@@ -42,9 +36,7 @@
         // which is defined in a CSV file and
         // might override the default values
         // of the "params" field
-        "entities": {
-            "file": "thermals.csv"
-        },
+        "file": "thermals.csv",
         "params": {}
     }
 }
