uniform constructors for all entities

--- a/data-refactor/data/resources.jsonc
+++ b/data-refactor/data/resources.jsonc
@@ -1,7 +1,7 @@
 {
     "solver": {
         // CLP | GLPK | HiGHS | CPLEX | Gurobi | ...
-        "name": "CLP",
+        "kind": "CLP",
         "params": {}
     }
     // TODO
