--- a/data-refactor/data/system.jsonc
+++ b/data-refactor/data/system.jsonc
@@ -3,9 +3,9 @@
         // accepts an external list of entities,
         // which is defined in a CSV file and
         // might override the default values
-        // of the "params" field
+        // of the "default_values" field
         "file": "buses.csv",
-        "params": {
+        "default_values": {
             "deficit_cost": 1000.0
         }
     },
@@ -13,9 +13,9 @@
         // accepts an external list of entities,
         // which is defined in a CSV file and
         // might override the default values
-        // of the "params" field
+        // of the "default_values" field
         "file": "lines.csv",
-        "params": {
+        "default_values": {
             "exchange_penalty": 0.01
         }
     },
@@ -23,9 +23,9 @@
         // accepts an external list of entities,
         // which is defined in a CSV file and
         // might override the default values
-        // of the "params" field
+        // of the "default_values" field
         "file": "hydros.csv",
-        "params": {
+        "default_values": {
             "downstream_id": 0,
             "productivity": 1.0,
             "spillage_penalty": 0.01
@@ -35,8 +35,8 @@
         // accepts an external list of entities,
         // which is defined in a CSV file and
         // might override the default values
-        // of the "params" field
+        // of the "default_values" field
         "file": "thermals.csv",
-        "params": {}
+        "default_values": {}
     }
 }
