adds support to multiple solvers

--- a/data-refactor/data/resources.jsonc
+++ b/data-refactor/data/resources.jsonc
@@ -1,7 +1,7 @@
 {
     "solver": {
         // CLP | GLPK | HiGHS | CPLEX | Gurobi | ...
-        "kind": "CLP",
+        "kind": "GLPK",
         "params": {}
     }
     // TODO
