adds multiple stopping criterias

--- a/data-refactor/data/tasks.jsonc
+++ b/data-refactor/data/tasks.jsonc
@@ -18,15 +18,19 @@
                     "max_iterations": 50,
                     // Early stopping criteria and params
                     "stopping_criteria": {
-                        // LowerBoundStability | statistical | gap | ...
-                        "kind": "LowerBoundStability",
+                        // IterationLimit | TimeLimit | LowerBoundStability | Statistical | ...
+                        "kind": "IterationLimit",
                         "params": {
-                            // Threshold for the early
-                            // stopping in % of zinf delta
-                            // per iteration
-                            "threshold": 0.1,
-                            "num_iterations": 6
+                            "num_iterations": 50
                         }
+                        // "kind": "LowerBoundStability",
+                        // "params": {
+                        //     // Threshold for the early
+                        //     // stopping in % of zinf delta
+                        //     // per iteration
+                        //     "threshold": 0.1,
+                        //     "num_iterations": 6
+                        // }
                     }
                 },
                 "results": {
