--- a/data-refactor/data/tasks.jsonc
+++ b/data-refactor/data/tasks.jsonc
@@ -5,7 +5,7 @@
             "params": {
                 "results": {
                     "path": "out/echo",
-                    "save": true
+                    "save": false
                 }
             }
         },
