--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ uuid = "5c1c4b2a-157d-4661-af07-65cbafd6173d"
 version = "1.0.2"
 
 [deps]
+Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Copulas = "ae264745-0b69-425e-9d9d-cf662c5eec93"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
