--- a/Project.toml
+++ b/Project.toml
@@ -21,29 +21,14 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [weakdeps]
-Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
-CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
-Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
-HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
-
-[extensions]
-ClpExt = "Clp"
-CPLEXExt = "CPLEX"
-GLPKExt = "GLPK"
-GurobiExt = "Gurobi"
-HiGHSExt = "HiGHS"
 
 [compat]
-CPLEX = "1.0.3"
-Clp = "1.2.0"
 GLPK = "1.2.1"
-Gurobi = "1.4.0"
-HiGHS = "1.12.1"
 
 [extras]
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Clp", "GLPK", "HiGHS", "Test", "Suppressor"]
+test = ["GLPK", "Test", "Suppressor"]
